<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DialActivity" 
    android:background="@color/lighter_gray"  >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/DialActivity_dial"
        android:text="@string/DialActivity_dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="28dp"
         />

    <Button
        android:id="@+id/DialActivity_phoneTransferBack"
        android:text="@string/DialActivity_phoneTransferBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/DialActivity_dial"
        android:layout_below="@+id/DialActivity_dial"
        android:layout_marginTop="22dp"
        />

    <Button
        android:id="@+id/DialActivity_phoneTransfer"
        android:text="@string/DialActivity_phoneTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/DialActivity_phoneTransferBack"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/DialActivity_hangup"
        android:text="@string/DialActivity_hangup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/DialActivity_phoneAnswer"
        android:layout_alignBottom="@+id/DialActivity_phoneAnswer"
        android:layout_alignRight="@+id/editText1"
       />

    <Button
        android:id="@+id/DialActivity_phoneAnswer"
        android:text="@string/DialActivity_phoneAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/DialActivity_dial"
        android:layout_alignBottom="@+id/DialActivity_dial"
        android:layout_alignLeft="@+id/DialActivity_phoneTransfer"
       />

</RelativeLayout>
