<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2006 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.-->


<!--
     The grid of buttons used in the onscreen DTMF dialpad;
     see dtmf_twelve_key_dialer_view.xml. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/phone_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dialpad_vertical_margin_left"
        android:layout_marginTop="@dimen/dialpad_vertical_margin"
         android:layout_weight="80"
        android:orientation="horizontal" 
        android:background="@color/darker_gray">

        <LinearLayout
            android:id="@+id/phone_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dialpad_vertical_margin_left"
            android:layout_marginTop="@dimen/dialpad_vertical_margin"
            android:layout_weight="1"
            android:background="@color/darker_gray"
            android:gravity="left"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/dialButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/call_contact" />

            <ImageButton
                android:id="@+id/handupButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_lockscreen_decline_normal" />

            <ImageButton
                android:id="@+id/mic_muteButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_voice_search" />

            <ImageButton
                android:id="@+id/speaker_muteButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_volume_small" />
        </LinearLayout>
      <LinearLayout 
	    android:id="@+id/digits_container"
	    android:layout_width="0dp"
	    android:layout_weight="6"
	    android:layout_height="match_parent"
	    android:layout_marginRight="@dimen/dialpad_vertical_margin_left"
	    android:layout_marginTop="@dimen/dialpad_vertical_margin"
	    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:background="@color/darker_gray"
        android:layout_margin="@dimen/dialpad_vertical_margin"
        android:layout_weight="@integer/dialpad_layout_weight_digits" >

        <EditText
            android:id="@+id/digits"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/darker_gray"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:nextFocusRight="@+id/deleteButton"
            android:scrollHorizontally="true"
            android:textAppearance="@style/DialtactsDigitsTextAppearance"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="100dip"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/description_delete_button"
            android:gravity="center"
            android:src="@drawable/ic_dial_action_delete"
            android:state_enabled="false" />
    </LinearLayout>

    <!-- Keypad section -->


    <!--
         <View
       android:layout_width="match_parent"
       android:layout_height="@dimen/dialpad_vertical_margin"
       android:background="#66000000"/>    -->

    <TableLayout
        android:id="@+id/dialpad"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_gravity="center_horizontal"
        android:layout_weight="@integer/dialpad_layout_weight_dialpad"
        android:layoutDirection="ltr"
        android:paddingBottom="10dip"
        android:paddingEnd="5dip"
        android:paddingStart="5dip" >

        <TableRow
            android:layout_height="0px"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/one"
                style="@style/DialpadButtonStyle"
                android:background="@color/incall_secondary_info_background"
                android:layout_margin="@dimen/dialpad_vertical_margin"
                android:contentDescription="@string/description_image_button_one"
                android:src="@drawable/dial_num_1_no_vm_wht" />

            <ImageButton
                android:id="@+id/two"
                style="@style/DialpadButtonStyle"
                android:background="@color/incall_secondary_info_background"
                android:layout_margin="@dimen/dialpad_vertical_margin"
                android:contentDescription="@string/description_image_button_two"
                android:src="@drawable/dial_num_2_wht" />

            <ImageButton
                android:id="@+id/three"
                style="@style/DialpadButtonStyle"
                android:background="@color/incall_secondary_info_background"
                android:layout_margin="@dimen/dialpad_vertical_margin"
                android:contentDescription="@string/description_image_button_three"
                android:src="@drawable/dial_num_3_wht" />
        </TableRow>

        <TableRow
            android:layout_height="0px"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/four"
                style="@style/DialpadButtonStyle"
                android:background="@color/incall_secondary_info_background"
                android:layout_margin="@dimen/dialpad_vertical_margin"
                android:contentDescription="@string/description_image_button_four"
                android:src="@drawable/dial_num_4_wht" />

            <ImageButton
                android:id="@+id/five"
                style="@style/DialpadButtonStyle"
                android:background="@color/incall_secondary_info_background"
                android:layout_margin="@dimen/dialpad_vertical_margin"
                android:contentDescription="@string/description_image_button_five"
                android:src="@drawable/dial_num_5_wht" />

            <ImageButton
                android:id="@+id/six"
                style="@style/DialpadButtonStyle"
                android:background="@color/incall_secondary_info_background"
                android:layout_margin="@dimen/dialpad_vertical_margin"
                android:contentDescription="@string/description_image_button_six"
                android:src="@drawable/dial_num_6_wht" />
        </TableRow>

        <TableRow
            android:layout_height="0px"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/seven"
                style="@style/DialpadButtonStyle"
                android:background="@color/incall_secondary_info_background"
                android:layout_margin="@dimen/dialpad_vertical_margin"
                android:contentDescription="@string/description_image_button_seven"
                android:src="@drawable/dial_num_7_wht" />

            <ImageButton
                android:id="@+id/eight"
                style="@style/DialpadButtonStyle"
                android:background="@color/incall_secondary_info_background"
                android:layout_margin="@dimen/dialpad_vertical_margin"
                android:contentDescription="@string/description_image_button_eight"
                android:src="@drawable/dial_num_8_wht" />

            <ImageButton
                android:id="@+id/nine"
                style="@style/DialpadButtonStyle"
                android:background="@color/incall_secondary_info_background"
                android:layout_margin="@dimen/dialpad_vertical_margin"
                android:contentDescription="@string/description_image_button_nine"
                android:src="@drawable/dial_num_9_wht" />
        </TableRow>

        <TableRow
            android:layout_height="0px"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/star"
                style="@style/DialpadButtonStyle"
                android:background="@color/incall_secondary_info_background"
                android:layout_margin="@dimen/dialpad_vertical_margin"
                android:contentDescription="@string/description_image_button_star"
                android:src="@drawable/dial_num_star_wht" />

            <ImageButton
                android:id="@+id/zero"
                style="@style/DialpadButtonStyle"
                android:background="@color/incall_secondary_info_background"
                android:layout_margin="@dimen/dialpad_vertical_margin"
                android:contentDescription="@string/description_image_button_zero"
                android:src="@drawable/dial_num_0_no_plus_wht" />

            <ImageButton
                android:id="@+id/pound"
                style="@style/DialpadButtonStyle"
                android:background="@color/incall_secondary_info_background"
                android:layout_margin="@dimen/dialpad_vertical_margin"
                android:contentDescription="@string/description_image_button_pound"
                android:src="@drawable/dial_num_pound_wht" />
        </TableRow>
    </TableLayout>
</LinearLayout>

</LinearLayout>