<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<!-- TODO(klp): move out to separate file  dc:outerRingDrawable="@*android:drawable/ic_lockscreen_outerring"    dc:pointDrawable="@*android:drawable/ic_lockscreen_glowdot"-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_gray">

    
    <LinearLayout
        	android:id="@+id/phone_text_layout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/darker_gray"
	        android:gravity="center"
	        android:orientation="vertical" 
	        android:layout_above="@+id/glow_layout" >
    
    
			    <LinearLayout 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="vertical"
				    android:background="@color/darker_gray" 
				    android:gravity="center">
				    
						    <TextView
						        android:id="@+id/ComingPhone"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:gravity="center"
						        android:text="@string/Coming_info"
						        android:textColor="@color/snow"
						        android:textSize="30sp" />
			
						    <TextView
						        android:id="@+id/ComingPhone_name"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:gravity="center"
						        android:text="@string/Phone_name"
						        android:textColor="@color/lighter_gray"
						        android:textSize="20sp" />
			
						    <TextView
						        android:id="@+id/ComingPhone_num"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:gravity="center"
						        android:text="@string/Phone_num"
						        android:textColor="@color/lighter_gray"
						        android:textSize="20sp" />
			    
				</LinearLayout>
    	</LinearLayout>
    	
		<com.goodocom.rk.GlowPadWrapper
		    android:id="@+id/glow_pad_view"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/phone_text_layout"
		    android:layout_centerHorizontal="true"
		    android:background="@color/darker_gray"
		    android:focusable="true"
		    android:gravity="center|bottom"
		    android:visibility="visible"
		    dc:allowScaling="true"
		    dc:directionDescriptions="@array/incoming_call_widget_2way_direction_descriptions"
		    dc:feedbackCount="10"
		    dc:glowRadius="@dimen/glowpadview_glow_radius"
		    dc:handleDrawable="@drawable/ic_in_call_touch_handle"
		    dc:innerRadius="@dimen/glowpadview_inner_radius"
		    dc:outerRadius="@dimen/glowpadview_target_placement_radius"
		    dc:snapMargin="@dimen/glowpadview_snap_margin"
		    dc:targetDescriptions="@array/incoming_call_widget_2way_target_descriptions"
		    dc:targetDrawables="@array/incoming_call_widget_2way_targets"
		    dc:vibrationDuration="20" >
		
		</com.goodocom.rk.GlowPadWrapper>
</RelativeLayout>
